cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_22335_bastion_security.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "v1.0 Creates Security Group for Bastion Services.",
  "Parameters": {
    "Environment": {
      "Description": "Name of the environment to launch this bastion host into.",
      "Type": "String",
      "MinLength": "4",
      "MaxLength": "8",
      "AllowedPattern": "[a-z0-9]*",
      "ConstraintDescription": "Can contain 4 to 8 lower case alphanumeric characters."
    },
    "Vpc": {
      "Description": "VPC to launch this subnet into.",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Outputs": {
    "ExternalSecurityGroup": {
      "Value": {
        "Ref": "ExternalBastionSecurityGroup"
      }
    },
    "InternalSecurityGroup": {
      "Value": {
        "Ref": "InternalBastionSecurityGroup"
      }
    }
  },
  "Resources": {
    "ExternalBastionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Rules for allowing access to Bastion Host from Internet",
        "VpcId": {
          "Ref": "Vpc"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "InternalBastionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Rules for allowing access to VPC servers from Bastion Host",
        "VpcId": {
          "Ref": "Vpc"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "SourceSecurityGroupId": {
              "Ref": "ExternalBastionSecurityGroup"
            }
          }
        ]
      }
    },
    "InternalTcpConsulServerIngressSerfLan": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "8301",
        "ToPort": "8301",
        "GroupId": {
          "Ref": "InternalBastionSecurityGroup"
        },
        "CidrIp": "10.0.0.0/8"
      }
    },
    "InternalUdpConsulServerIngressSerfLan": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "udp",
        "FromPort": "8301",
        "ToPort": "8301",
        "GroupId": {
          "Ref": "InternalBastionSecurityGroup"
        },
        "CidrIp": "10.0.0.0/8"
      }
    }
  }
}
